Update and rename wrangle_act-checkpoint.ipynb to wrangle_act.ipynb

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "### Introduction\n",
-    "This  is a fatawrangling project of WeRateDogs twitter user. This a twitter account that use humorous saying to rate people's dogs. They have an interesting way of rating dogs because all of their ratings are avove 10. I will be performing data wrangling on the twgitter user.\n"
+    "This  is a data wrangling project of WeRateDogs twitter user. This a twitter account that use humorous saying to rate people's dogs. They have an interesting way of rating dogs because all of their ratings are avove 10. I will be performing data wrangling on the twgitter user.\n"
    ]
   },
   {
